<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_523567"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_margin="16dp"

        android:columnCount="4"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnSpan="4"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="ЗДЕСЬ БУДЕТ ОТОБРАЖАТЬСЯ  ВЫЧИСЛЕНИЕ" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_columnSpan="4"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="ЗДЕСЬ БУДЕТ РЕЗУЛЬТАТ ВЫЧИСЛЕНИЙ" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_C"
            android:textColor="@color/design_default_color_error"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_parentheses"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_percent"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_divide"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_1"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_2"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_3"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_multiply"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_4"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_5"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_6"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_subtract"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_7"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_8"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_9"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_add"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_polarity"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_0"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#303030"
            android:text="@string/key_dot"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="#32CD32"
            android:text="@string/key_result"
            android:textSize="30sp" />
    </GridLayout>

</LinearLayout>